# vibe-my-spotify

./: .gitignore  .mcp.json  CLAUDE.md  README.md  auth.sh  auth_helper.py  run-server.sh
docs/: spotify-rate-limits.md  streaming-api-alternatives.md
patches/: 0001-fix-robust-playlist-track-parsing-lighter-total-look.patch  0002-fix-create_playlist-uses-current_user_playlist_creat.patch  0003-feat-positional-keep-one-track-removal-for-dedup.patch  0004-feat-chunk-playlist-writes-at-Spotify-s-100-item-cap.patch  0005-feat-expose-track-uri-and-playlist-position-for-dedu.patch
scripts/: dedup_report.py  dedup_review.py  enrich_exports.py  enrich_musicbrainz.py  export_playlists.py  phantom_audit.py
spotify-mcp/: .gitignore  CHANGELOG.md  CLAUDE.md  README.md  VENDORED.md  pyproject.toml  release.sh  server.json
spotify-mcp/.github/workflows/: ci.yml  deploy-pages.yml  publish.yml
spotify-mcp/docs/: index.html
spotify-mcp/src/spotify_mcp/: errors.py  fastmcp_server.py  logging_utils.py  spotify_api.py  spotify_types.py  utils.py
spotify-mcp/tests/: conftest.py  test_errors.py  test_fastmcp_tools.py  test_packaging.py  test_spotify_api.py  test_utils.py
